# discord-ocr-bot

discord-ocr-bot/: .renderignore.txt  keep_alive.py  main.py  pyproject.toml  requirements.txt
