[tool.poetry]
name = "discord-ocr-bot"
version = "0.1.0"
description = ""
authors = ["Tu Nombre <tuemail@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord.py = "^2.0.0"
pytesseract = "*"
pillow = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
